--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Fresh Start</title>
     <style>
         div{
-            margin: 200px 300px 600px;
+                        margin: 600px 600px 1000px 1000px ;
+
 
         }
 
