--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fresh Start</title>
     <style>
-        div{
-                        margin: 600px 600px 1000px 1000px ;
-
+         div{
+            background-color: aqua;
+            margin: 600px 600px 900px 600px ;
+            border: 20px solid blue;
+            
 
         }
-
         
 
     </style>
